@startuml
'https://plantuml.com/class-diagram

class Ship
class CargoShip
class CruiseShip

Ship <|-- CargoShip
Ship <|-- CruiseShip


class Ship{
# shipName : String
# yearShipWasBuilt : String
+getShipName(): String
+setShipName(String shipName): void
+getYearBuilt(): String
+setYearBuilt() : void
+ display() : void
}

class CargoShip{
- shipCapacity : int
+ getCargoShipCapacity() : int
+ setCargoShipCapacity(int shipCapacity) : void
+ display() : void
}

class CruiseShip{
- maxNumberPassengers; : int
+ getMaxNumberPassengers() : int
+ setMaxNumberPassengers(int maxNumberPassengers) : void
+ display() : void
}
@enduml